src/frontend/static/css/styles.css
@font-face {
  font-family: 'Overpass Regular';
  src: url('../fonts/Overpass-Regular.ttf');
}

@font-face {
  font-family: 'Overpass Semibold';
  src: url('../fonts/Overpass-SemiBold.ttf');
}

@font-face {
  font-family: 'Overpass Light';
  src: url('../fonts/Overpass-Light.ttf');
}

html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  color: #fff;
}

body {
  background: url('../images/background.png') no-repeat center/cover;
}

strong {
  font-family: 'Overpass Semibold';
}

main {
  display: flex;
  height: 100%;
}

.right,
.left {
  width: 50%;
}

.left {
  background: url('../images/logo.svg') no-repeat top 3rem right 1.5rem;
  position: relative;
  display: flex;
  align-items: flex-end;
  justify-content: flex-end;
}

.container {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  height: 80%;
  width: 93%;
  border-radius: 0.625rem;
  background: linear-gradient(
      180deg,
      rgba(255, 255, 255, 0.1) 0%,
      rgba(0, 0, 0, 0.12) 100%
    ),
    rgba(32, 1, 49, 0.6);
  padding-bottom: 2.5rem;
  box-shadow: -2px -2px 9px 0 rgba(255, 255, 255, 0.2),
    2px 2px 9px 0 rgba(0, 0, 0, 0.2);
}

.heading {
  font-family: 'Overpass Semibold';
  font-size: 1rem;
  margin: 3.5rem 0 2rem 3rem;
}

.scrollContainer {
  height: 86%;
  padding: 0 4rem 0 3rem;
  overflow-y: scroll;
}

.info {
  font-family: 'Overpass Semibold';
  margin-bottom: 3rem;
}

.lists {
  padding-left: 0.75rem;
  padding-bottom: 2rem;
}

.subline {
  font-family: 'Overpass Semibold';
  font-size: 0.875rem;
  margin: 1.25rem 0 1.25rem 0;
}

.mediaList {
  list-style: none;
  margin-top: 1.25rem;
  width: 100%;
  padding: 0;
  margin: 0;
}

.expandableItem {
  width: 100%;
  box-sizing: border-box;
  padding-top: 0.75rem;
  padding-left: 2rem;
  padding-right: 2rem;
}

.expanded {
  padding-bottom: 2rem;
  background-color: rgba(187, 41, 75, 0.1);
  box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.3);
  border-radius: 0.625rem;
}

.itemLabel {
  font-family: 'Overpass Semibold';
  display: inline-flex;
  align-items: center;
  margin: 0;
}

.button {
  border: none;
  cursor: pointer;
}

.accordion {
  height: 1.25rem;
  width: 1.25rem;
  background: url('../images/chevron_down.svg') no-repeat center/contain #180026;
  margin-right: 0.5rem;
  border: 0.75px solid #ffffff;
  border-radius: 0.25rem;
}

.closed {
  transform: rotate(-90deg);
}

.opened {
  transform: none;
}

.emailForm {
  display: flex;
  flex-direction: column;
  margin-top: 2.25rem;
}

.formLabel {
  font-family: 'Overpass Regular';
  font-size: 0.875rem;
  color: #fff;
}

.formInput {
  font-family: 'Overpass Regular';
  font-size: 0.875rem;
  color: #fff;
  display: block;
  width: 85%;
  height: 2.125rem;
  border: 0.75px solid #fff;
  border-radius: 0.625rem;
  background: rgba(187, 41, 75, 0.35);
  color: #fff;
  box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.3),
    -2px -2px 4px 0 rgba(255, 255, 255, 0.3);
  margin-bottom: 1.25rem;
  margin-top: 0.25rem;
}

.buttonPrimary {
  height: 2rem;
  padding: 0 1.75rem;
  align-self: center;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  margin: 4rem 0 4rem 0;
  border-radius: 1rem;
  font-family: 'Overpass Semibold';
  font-size: 0.875rem;
  text-transform: uppercase;
  color: #fff;
  background-color: #e43366;
  box-shadow: 2px 2px 3px 1px rgba(0, 0, 0, 0.15),
    -2px -2px 3px 1px rgba(255, 255, 255, 0.3);
  text-decoration: none;
}

.buttonPrimary:active {
  transform: translateY(2px);
  box-shadow: 2px 0 3px 1px rgba(0, 0, 0, 0.15),
    -2px -2px 3px 1px rgba(255, 255, 255, 0.3);
}

.buttonPrimary:disabled {
  background-color: #797979;
}

.success {
  font-family: 'Overpass Regular';
  text-align: center;
}

.right {
  background: url('../images/hexagon.png') no-repeat center/70%;
  position: relative;
}

.large {
  font-family: 'Overpass Semibold';
  font-size: 4rem;
}

.tagline {
  position: absolute;
  top: 30%;
  left: 20%;
  display: flex;
  flex-direction: column;
  width: calc(402rem / 16);
  font-family: 'Overpass Regular';
  font-size: 1.5rem;
  line-height: 2.25rem;
}

.textRight {
  align-self: flex-end;
}

footer {
  position: absolute;
  bottom: 0;
  height: 2.5rem;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #030006;
  font-family: 'Overpass Semibold';
  font-size: 0.875rem;
}

.navList {
  list-style: none;
  padding: 0;
  margin: 0;
}

.navItem {
  display: inline-block;
  cursor: pointer;
}

.navItem:first-child::after {
  content: ' | ';
  color: #bb294b;
}

